--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -6,7 +6,15 @@
 }
 
 body{
-  background-image: url(/img/node.png);
+  background-color: white;
   background-size: cover;
 }
 
+.box{
+  display: inline-block;
+  border: 1px solid black;
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+}
